# malloy-publisher-client

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: python-development.mdc
malloy_mcp_server/: __init__.py
malloy_mcp_server/api_client/: client.py  models.py
malloy_publisher/: __init__.py
malloy_publisher/api_client/: client.py
malloy_publisher_client/: models.py
molloy_publisher_client/: __init__.py
tests/: test_malloy_api_client.py
